# LanguageTrainer

./: .gitignore  .gitmodules  CMakeLists.txt  LanguageTrainerVideoPlayer.pro  README.md
LanguageTrainerVideoPlayer/: main.qml
src/: CustomVideoPlayer.qml  PlayerControls.qml  PlayerControlsForm.ui.qml  SettingsWindow.qml  VlcPlayerEventHandler.cpp  VlcPlayerEventHandler.h  main.cpp  main.qml  qml.qrc
src/core/: VlcPlayerEventHandler.h
src/qml/: PlayerControls.qml
